fix bugs and update datatablejs

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -362,23 +362,31 @@
                                    	<input class="form-control" type="text" placeholder="Living Location Code" data-field="locationCode" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off">
 	                            </li>
 								<li>
-	                                <b data-persona="key"> <i class="fa fa-fw fa-globe"></i> Primary Nationality  </b> 
+	                                <b data-persona="key"> <i class="fa fa-fw fa-map-marker"></i> Primary Nationality  </b> 
 	                                <input class="form-control" type="text" placeholder="Primary Nationality" data-field="primaryNationality" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" >
 	                            </li>
 	                            <li>
-	                                <b data-persona="key" > <i class="fa fa-fw fa-globe"></i> Current Living City </b> 
+	                                <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living City </b> 
 	                                <input class="form-control" type="text" placeholder="Current Living City" data-field="livingCity" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" >
 	                            </li>
 	                            <li>
-	                                <b data-persona="key" > <i class="fa fa-fw fa-globe"></i> Current Living State </b> 
+	                                <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living Province </b> 
+	                                <input class="form-control" type="text" placeholder="Current Living Province" data-field="livingProvince" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" >
+	                            </li>
+	                            <li>
+	                                <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living County </b> 
+	                                <input class="form-control" type="text" placeholder="Current Living County" data-field="livingCounty" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" >
+	                            </li>
+	                            <li>
+	                                <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living State </b> 
 	                                <input class="form-control" type="text" placeholder="Current Living State" data-field="livingState" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" >
 	                            </li>
 	                            <li>
-	                                <b data-persona="key" > <i class="fa fa-fw fa-globe"></i> Current Living Country </b> 
+	                                <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living Country </b> 
 	                                <input class="form-control" type="text" placeholder="Current Living Country" data-field="livingCountry" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" >
 	                            </li>
 	                            <li>
-	                                <b data-persona="key" > <i class="fa fa-fw fa-globe"></i> Current ZipCode </b> 
+	                                <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current ZipCode </b> 
 	                                <input class="form-control" type="text" placeholder="Current ZipCode" data-field="currentZipCode" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" >
 	                            </li>							
 							</ol>
