--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -776,23 +776,31 @@
 				                                   <p class="data_field highlight_text" data-field="locationCode" data-fieldholder="locationcode" data-fieldtype="string" > - </p>
 				                                </li>
 				                                <li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-globe"></i> Primary Nationality </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Primary Nationality </b> 
 								                   <p class="data_field highlight_text" data-field="primaryNationality" data-fieldholder="html" data-fieldtype="string"  > </p>
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-globe"></i> Current Living City </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living City </b> 
 								                   <p class="data_field highlight_text" data-field="livingCity" data-fieldholder="html" data-fieldtype="string"  > </p>
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-globe"></i> Current Living State </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living Province </b> 
+								                   <p class="data_field highlight_text" data-field="livingProvince" data-fieldholder="html" data-fieldtype="string" > </p>
+								               	</li>
+								               	<li>
+								                   <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living County </b> 
+								                   <p class="data_field highlight_text" data-field="livingCounty" data-fieldholder="html" data-fieldtype="string" > </p>
+								               	</li>
+								               	<li>
+								                   <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living State </b> 
 								                   <p class="data_field highlight_text" data-field="livingState" data-fieldholder="html" data-fieldtype="string" > </p>
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-globe"></i> Current Living Country </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current Living Country </b> 
 								                   <p class="data_field highlight_text" data-field="livingCountry" data-fieldholder="html" data-fieldtype="string"  > </p>
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-globe"></i> Current ZipCode </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Current ZipCode </b> 
 								                   <p class="data_field highlight_text" data-field="currentZipCode" data-fieldholder="html" data-fieldtype="string" > </p>
 								               	</li>
 							               	</ol>
