--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -139,11 +139,10 @@
 	<div class="row gridholder">
 	    <div class="col-lg-12">
 	        <div class="table-responsive">
-	        	
 	            <table id="profile_list_table" class="display" style="width:100%;">
 	                <thead>
 	                    <tr>
-	                        <th class="text-center" title="A profile that has mobile phone or email">Contact Data</th>
+	                        <th class="text-center" title="A profile that has mobile phone or email">Is_Contact</th>
 	                        <th> Full Name </th>
 	                        <th class="text-center">Email</th>
 	                        <th class="text-center">Phone</th>
