--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -40,6 +40,12 @@
 		       	<li data-for-superadmin="true" style="display: none;">
 					<a href="javascript:loadEditableProfile()" data-target-tab="panel_login_account_editable_profiles" title="Editable Profiles" > <i class="fa fa-users" aria-hidden="true"></i> Editable Profiles </a>
 		       	</li>
+		       	<li data-for-superadmin="true" style="display: none;">
+					<a href="javascript:loadViewableSegment()" data-target-tab="panel_login_account_viewable_segments" title="Viewable Segments" > <i class="fa fa-users" aria-hidden="true"></i> Viewable Segments </a>
+		       	</li>
+		       	<li data-for-superadmin="true" style="display: none;">
+					<a href="javascript:loadEditableSegment()" data-target-tab="panel_login_account_editable_segments" title="Editable Segments" > <i class="fa fa-users" aria-hidden="true"></i> Editable Segments </a>
+		       	</li>
 		  	</ul>
 		  	
 		  	<!-- Tab Contents  -->
@@ -165,13 +171,13 @@
 					<div id="viewable_profile_list_loader" class="loader"></div>
 					<div id="viewable_profile_list" style="display: none;" >	
 					    <!-- viewable profile list -->
-						<div class=" gridholder">
+						<div class="row gridholder">
 						    <div class="col-lg-12">
 						        <div class="table-responsive">
 						            <table id="viewable_profile_list_table" class="display" style="width:100%;">
 						                <thead>
 						                    <tr>
-						                        <th class="text-center" title="A profile that has mobile phone or email">Contact Data</th>
+						                        <th class="text-center" title="A profile that has mobile phone or email">Is_Contact</th>
 						                        <th> Full Name </th>
 						                        <th class="text-center">Email</th>
 						                        <th class="text-center">Phone</th>
@@ -204,7 +210,7 @@
 						            <table id="editable_profile_list_table" class="display" style="width:100%;">
 						                <thead>
 						                    <tr>
-						                        <th class="text-center" title="A profile that has mobile phone or email">Contact Data</th>
+						                        <th class="text-center" title="A profile that has mobile phone or email">Is_Contact</th>
 						                        <th> Full Name </th>
 						                        <th class="text-center">Email</th>
 						                        <th class="text-center">Phone</th>
