--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -155,6 +155,21 @@
 	                        <th class="text-center">Actions</th>
 	                    </tr>
 	                </thead>
+	                <tfoot>
+	                    <tr>
+	                        <th class="text-center" title="A profile that has mobile phone or email">Is_Contact</th>
+	                        <th> Full Name </th>
+	                        <th class="text-center">Email</th>
+	                        <th class="text-center">Phone</th>
+	                        <th class="text-center">Last-seen Touchpoint</th>
+	                        <th class="text-center">Data Quality</th>
+	                        <th class="text-center">Lead Score</th>
+	                        <th class="text-center">CLV Score</th>	                        
+	                        <th class="text-center">Updated</th>
+	                        <th class="text-center">Status</th>
+	                        <th class="text-center">Actions</th>
+	                    </tr>
+	                </tfoot>
 	            </table>
 	        </div>
 	    </div>
