--- a/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
@@ -37,15 +37,26 @@ th.sorting, th.sorting_desc, th.sorting_asc {
 	        <table id="segment_list_table" class="display" style="width:100%;">
 	            <thead>
 	                <tr>
-	                    <th>Segment Name</th>
-	                    <th>Description</th>
-	                    <th>Data Owner</th>
-	                    <th>Created at</th>
-	                    <th>Updated at</th>
-	                    <th>Total Profile</th>
+	                    <th class="text-center">Segment Name</th>
+	                    <th class="text-center">Description</th>
+	                    <th class="text-center">Data Owner</th>
+	                    <th class="text-center">Created at</th>
+	                    <th class="text-center">Updated at</th>
+	                    <th class="text-center">Total Profile</th>
 	                    <th>Actions</th>
 	                </tr>
 	            </thead>
+	            <tfoot>
+	                <tr>
+	                    <th class="text-center">Segment Name</th>
+	                    <th class="text-center">Description</th>
+	                    <th class="text-center">Data Owner</th>
+	                    <th class="text-center">Created at</th>
+	                    <th class="text-center">Updated at</th>
+	                    <th class="text-center">Total Profile</th>
+	                    <th>Actions</th>
+	                </tr>
+	            </tfoot>
 	        </table>
 	    </div>
 	</div>
