--- a/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
@@ -27,12 +27,12 @@
                         <tr>
                          	<th>Avatar</th>
                             <th>Display Name</th>
-                            <th>Login Username</th>
+                            <th>User Login</th>
                             <th>Email</th>
                             <th>Created at</th>
                             <th>Updated at</th>
                             <th>Status</th>
-                            <th>Role</th>
+                            <th>User's Role</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
@@ -40,12 +40,12 @@
                         <tr>
                         	<th>Avatar</th>
                             <th>Display Name</th>
-                            <th>Login Username</th>
+                            <th>User Login</th>
                             <th>Email</th>
                             <th>Created at</th>
                             <th>Updated at</th>
                             <th>Status</th>
-                            <th>Role</th>
+                            <th>User's Role</th>
                             <th>Actions</th>
                         </tr>
                     </tfoot>
