--- a/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
@@ -39,7 +39,7 @@
 	                    <span id="systemUser_displayName" class="highlight_text"></span>
 	                </div>
 	                <div class="form-group">
-	                    <label> User Name</label>:
+	                    <label> User Login</label>:
 	                    <span id="systemUser_userLogin" class="highlight_text"></span>
 	                </div>
 	                <div class="form-group">
@@ -57,7 +57,7 @@
 	                </div>
 	                
 	                <div class="form-group">
-	                    <label>User Role</label>
+	                    <label>User's Role</label>
 	                    <div class="radio" >
 	                        <label><input type="radio" name="role" value="0" disabled="disabled" > 
 	                        	REPORT VIEWER: the login account can access Unified Analytics Hub to view summary reports </label>
@@ -87,7 +87,7 @@
 	                    </div>
 	                    <div class="radio">
 	                        <label><input type="radio" name="role" value="6" disabled="disabled"> 
-	                        	SUPER ADMIN: the login account has full of permissions to manage system and manage all login accounts </label>
+	                        	SUPER ADMIN: the login account has full of permissions to manage system and manage all user login accounts </label>
 	                    </div>
 	                </div>
 	               
