--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -171,12 +171,6 @@
 	
 	<script src="https://{{baseStaticUrl}}/js/codemirror/codemirror.yaml.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/codemirror/codemirror.formatting.js?_={{cacheBustingKey}}"></script>
-
-	<!-- BotUI CSS and JS  -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui-theme-default.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- jsGrid -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -209,16 +203,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js" ></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	
-	<!-- FilePond library -->
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-crop.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-resize.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-preview.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-file-validate-size.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-exif-orientation.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-file-validate-type.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/filepond.js?_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseStaticUrl}}/js/filepond/config-filepond.js?_={{cacheBustingKey}}"></script>
-	
 	<!-- Cytoscape.js for Graph Visualization -->
 	<script src="https://cdn.jsdelivr.net/npm/cytoscape@3.22.0/dist/cytoscape.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/layout-base@2.0.1/layout-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -248,14 +232,6 @@
 	</div>
 
 	<!-- ///////////////////////////////////////////////////////////////////////////////////////////// -->
-	
-	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js?_={{cacheBustingKey}}"></script>
-	
-	<!-- mermaid-js: create diagrams and visualizations using text and code -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/9.1.3/mermaid.min.js"></script>
-	
-	<!-- MarkDown parser: create document and rich-text format -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.18/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- LEO Admin Core -->
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leo.admin.common.js?admin=1&_={{cacheBustingKey}}"></script>
@@ -307,6 +283,31 @@
 		    });
 		});
 	</script>
+	
+	<!-- FilePond library -->
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-crop.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-resize.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-preview.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-file-validate-size.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-exif-orientation.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-file-validate-type.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/filepond.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{baseStaticUrl}}/js/filepond/config-filepond.js?_={{cacheBustingKey}}"></script>
+	
+	<!-- videojs player -->
+	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js"></script>
+	
+	<!-- mermaid-js: create diagrams and visualizations using text and code -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/9.1.3/mermaid.min.js"></script>
+	
+	<!-- MarkDown parser: create document and rich-text format -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.18/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<!-- BotUI CSS and JS  -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui-theme-default.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 </body>
 
