update for new build

--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -84,7 +84,7 @@
 			<!-- tab 2 Touchpoint Data Observer  -->
 			<div class="tab-pane" id="panel_data_observers" >
 				<div class="top_page_header" >
-					<h4> All Event Data Observers  </h4>
+					<h4> All Touchpoint Data Observers  </h4>
 				</div>
 		        <div class="table-responsive">
 		            <div id="data_observers_table"></div>
@@ -94,7 +94,7 @@
 			<!-- tab 3 Data Authorization  -->
 			<div class="tab-pane" id="panel_journey_data_authorization" >
 				<div class="top_page_header" >
-					<h4> Data Journey Authorization for <span id="authorizedJourneyName"></span> </h4>
+					<h4> Data Authorization for the Data Journey: <span id="authorizedJourneyName"></span> </h4>
 				</div>
 		        <div class="col-lg-12">
 		            <div class="form-group row"  >
