--- a/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-report.html
@@ -15,7 +15,7 @@
 	     </div>
 	</div>
 	
-	<h4> Login Account Information </h4>
+	<h4> User Login Account Information </h4>
 	<hr>
 
     <!-- MAIN BODY here -->
