--- a/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
@@ -18,7 +18,7 @@
     
 <div class="container-fluid">
 
-	<h4> All Login Accounts </h4>
+	<h4> All User Login Accounts </h4>
     <div class="row gridholder">
         <div class="col-lg-12">
             <div class="table-responsive">
