update for new features

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -352,6 +352,10 @@
                        <td>
 							<ol class="profile_ext_data" data-field="personal_attributes">
 								<li class="personal_info" >
+                                   	<b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Permanent Location Address </b>
+                                   	<input class="form-control" type="text" placeholder="Permanent Location Address" data-field="permanentLocation" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off">
+                                </li>
+								<li class="personal_info" >
                                    	<b data-persona="key" > <i class="fa fa-fw fa-map-marker"></i> Living Location Address </b>
                                    	<input class="form-control" type="text" placeholder="Living Location Address" data-field="livingLocation" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off">
                                 </li>
