--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -767,7 +767,11 @@
 				                   <tr>
 				                       <td>
 											<ol class="profile_ext_data" data-field="personal_attributes">
-								               <li>
+												<li>
+				                                   <b data-persona="key"  > <i class="fa fa-fw fa-map-marker"></i> Permanent Location Address </b> 
+				                                   <p class="data_field highlight_text" data-field="permanentLocation"  data-fieldholder="locationcode" data-fieldtype="string"  > - </p>
+				                                </li>
+								                <li>
 				                                   <b data-persona="key"  > <i class="fa fa-fw fa-map-marker"></i> Living Location Address </b> 
 				                                   <p class="data_field highlight_text" data-field="livingLocation"  data-fieldholder="locationcode" data-fieldtype="string"  > - </p>
 				                                </li>
