update for new features

--- a/resources/app-templates/leocdp-admin/common-widgets/confirm-delete-data-modal.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/confirm-delete-data-modal.html
@@ -10,8 +10,8 @@
             </div>
             <div class="modal-body">
                 <div class="alert alert-danger">
-                    <strong id="deletedInfoMsg" style="font-size: 1.1em;" >Do you want to delete ?</strong><br>
-                    <span id="deletedInfoTitle" style="font-size: 1.2em; font-weight: bold; padding-left: 10px;"></span>
+                    <strong id="deletedInfoMsg" > Do you want to delete data ?</strong><br>
+                    <span id="deletedInfoTitle" style="font-size: 1.1em; font-weight: bold; padding-left: 10px;"></span>
                 </div>
                 <input id="delete_callback" type="hidden" name="delete_callback" value="">
             </div>
