--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
@@ -155,8 +155,8 @@
 	   		       });
 	    	     }
 	    	     $('#delete_callback').val(callback);
-	    	     $('#deletedInfoTitle').html("Event Metric: " + eventName);
-	    	     $('#deletedInfoMsg').html('Delete Data Confirmation');
+	    	     $('#deletedInfoTitle').text("Event Metric: " + eventName).show();
+	    	     $('#deletedInfoMsg').text('Delete Data Confirmation');
 	    	}
 		}
 	    
