--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -215,6 +215,26 @@
 	
 	<!-- i18n Data Model -->
 	<script src="//{{baseAdminApiUrl}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
+	
+	<!-- common CSS -->
+	<style type="text/css">
+		.has_contact { background-color: #FFF8DC!important; color: #3300ff!important; font-size:14px!important; font-weight: bold; }
+		.no_contact {color:#000!important;}
+		th.sorting, th.sorting_desc, th.sorting_asc { text-decoration: underline;}
+		div.profile_medium_score { color:#1A529E!important;font-size:14px!important;}
+		div.profile_high_score { color:#3300ff!important;font-size:16px!important;}
+		.text-center { text-align: center!important; }
+		div.datatable_row_checkbox {
+			font-size:1.3em!important; color:#3300ff!important;
+			cursor: pointer; 
+			height: 32px!important; width:100%!important; border-radius: 8px;
+		}
+		div.datatable_row_checkbox:hover {
+			background-color: #FFF8DC!important;
+			color: #EC4B0A!important;
+			font-size:1.5em;
+		}
+	</style>
 </head>
 
 <body>
@@ -272,7 +292,6 @@
 		        '/view/common-widgets/confirm-delete-data-modal.html',
 		        '/view/common-widgets/leo-recommender.html',
 		        		
-		        '/view/templates/tpl-customer-profile-list.html',
 		        '/view/templates/tpl-customer-profile-info.html',
 		        '/view/templates/tpl-cx-analytics-dashboard.html',
 		        '/view/templates/tpl-customer-journey-flow.html'
