update for new features

--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -225,7 +225,7 @@ div.panel_header {
 						 	<button type="button" class="btn btn-danger" onclick="removeUserDataAuthorization('removeAllViewableProfiles','viewable_profile_list')" >
 						 		<i class="fa fa-fw fa-trash"></i> Remove All
 							</button>
-							<button type="button" class="btn btn-danger" onclick="removeUserDataAuthorization('removeSelectedViewableProfiles','viewable_profile_list')" >
+							<button type="button" class="btn btn-danger" onclick="" style="display: none;" >
 						 		<i class="fa fa-fw fa-trash"></i> Remove Selected
 							</button>
 						</div>
@@ -271,7 +271,7 @@ div.panel_header {
 						 	<button type="button" class="btn btn-danger" onclick="removeUserDataAuthorization('removeAllEditableProfiles','editable_profile_list')"  >
 						 		<i class="fa fa-fw fa-trash"></i> Remove All
 							</button>
-							<button type="button" class="btn btn-danger" onclick="removeUserDataAuthorization('removeSelectedEditableProfiles','editable_profile_list')"  >
+							<button type="button" class="btn btn-danger" onclick="" style="display: none;" >
 						 		<i class="fa fa-fw fa-trash"></i> Remove Selected
 							</button>
 						</div>
