--- a/resources/app-templates/leocdp-admin/modules/activation/data-connector-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/data-connector-list.html
@@ -19,7 +19,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="row" style="margin-bottom: 15px">
-				<h4> Data Connectors </h4>
+				<h4> <i class="fa fa-exchange " aria-hidden="true"></i> Data Connector Management </h4>
 				<b class="highlight_text" > Please set configuration to activate data connectors </b>
 			</div>
 			<div class="row" id="data_connectors_holder" >
