fix bugs and upgrade for new features

--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -113,6 +113,11 @@
 							</select>
 						</div>
 					</div>
+					<div class="checkbox">
+					  <label style="font-weight: bold;">
+					  	<input type="checkbox" id="updateAllProfilesInJourney" checked="checked"> Update data authorization of all profiles for updated data journey map
+					  </label>
+					</div>
 					<div class="form-group text-right"  >
 						<button type="button" class="btn btn-success" onclick="saveJourneyDataAuthorization()"  > 
 							<i class="fa fa-check-square-o" aria-hidden="true"></i> Update Data Authorization
