--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -421,7 +421,7 @@
              	   showProfileEventBubbleChart(textTitle, container, canvas, json.data);
              	   
              	   var fieldsSchema = [
-				        { name: "name", title : "Touchpoint", align: 'center' , type: "text" },			        
+				        { name: "name", title : "Touchpoint Hub Domain", align: 'center' , type: "text" },			        
 				        { name: "profileCount", title : "Total Profile", type: "number", align: 'center', width: 60 },
 				        { name: "eventCount", title : "Total Event", type: "number", align: 'center', width: 60 }
 				    ];
@@ -453,7 +453,7 @@
                 	showProfileEventBubbleChart(textTitle, container, canvas, json.data, "touchpoint");
                 	
                 	var fieldsSchema = [
- 				        { name: "touchpoint.name", title : "Touchpoint Item", align: 'center' , type: "text" },			        
+ 				        { name: "touchpoint.name", title : "Touchpoint Item Name", align: 'center' , type: "text" },			        
  				        { name: "profileCount", title : "Total Profile", type: "number", align: 'center', width: 60 },
  				        { name: "eventCount", title : "Total Event", type: "number", align: 'center', width: 60 }
  				    ];
