--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -83,12 +83,12 @@
             	<ul class="nav nav-tabs" data-tab-content="main_dashboard_report_tabs" >   
             		<li class="active">
 		         		<a href="javascript:" data-target-tab="panel_observer_report" title="Profile Sources by Observer" > 
-		         			<i class="fa fa-dot-circle-o" aria-hidden="true"></i> Profile Sources
+		         			<i class="fa fa-dot-circle-o" aria-hidden="true"></i> Customer Data Sources
 		         		</a>
 		         	</li>	         		
 		         	<li>
 		         		<a href="javascript:" data-target-tab="panel_touchpoint_report" title="Source Report Details at specific touchpoint" > 
-		         			<i class="fa fa-dot-circle-o" aria-hidden="true"></i> Profile Source Details
+		         			<i class="fa fa-dot-circle-o" aria-hidden="true"></i> Data Source Details
 		         		</a>
 		         	</li>
 		         	<li onclick="showDashboardReport(false)" >
