--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -61,7 +61,7 @@
         		<a href="javascript:" data-target-tab="panel_touchpoint_hubs" > <i class="fa fa-list" aria-hidden="true"></i> Touchpoint Hub </a>
        		</li>
        		<li id="tab_journey_data_report" >
-       			<a href="javascript:" data-target-tab="panel_journey_data_report"  > <i class="fa fa-lock" aria-hidden="true"></i> Data Report </a>
+       			<a href="javascript:" data-target-tab="panel_journey_data_report"  > <i class="fa fa-bar-chart aria-hidden="true"></i> Analytics Report  </a>
        		</li>
        		<li id="tab_journey_data_observers" style="display: none">
        			<a href="javascript:" data-target-tab="panel_data_observers"  > <i class="fa fa-list" aria-hidden="true"></i> Data Observer </a>
